--- a/app/components/dashboard/views/dashboard.html
+++ b/app/components/dashboard/views/dashboard.html
@@ -1,7 +1,7 @@
 <!-- This is the home page. -->
 <!-- User sign up/login logic is managed here -->
 <div id="homePage" ng-controller="dashboardCtrl">
-  <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
+  <md-toolbar id="home" md-scroll-y class="md-whiteframe-z4" layout="row">
       <md-button id="hitch_button" layout-align="left" ng-click="viewDashboard()">Hitch</md-button>
 
       <div layout="row" layout-align="end" hide show-gt-sm flex>
