--- a/app/components/home/views/homeView.html
+++ b/app/components/home/views/homeView.html
@@ -4,7 +4,7 @@
      
       <h1 id="hitch_home" layout-align-gt-sm="left" class="md-toolbar-tools">HITCH</h1>
       
-      <md-button ng-controller="LoginCtrl" ng-click="loginWithFacebook()">LOGIN</md-button>
+      <md-button ng-controller="LoginCtrl" ng-click="loginWithFacebook()" flex>LOGIN</md-button>
   </md-toolbar>
   <div id="outer-wrapper"> 
       <md-content layout="column" layout-align="center center" flex class="md-padding" id="home-content">
