added vehicle query

--- a/app/components/dashboard/views/post/postRideInfo.html
+++ b/app/components/dashboard/views/post/postRideInfo.html
@@ -1,4 +1,4 @@
-<md-content layout="row" flex class="md-padding" id="home-content">
+<md-content layout="row" flex class="md-padding" id="home-content" data-ng-init="initPostRide()">
   <div class="section find_a_ride" id="dashboard-start" layout="column" layout-align="center top">
 
     <div layout="row" layout-align="center">
@@ -20,8 +20,8 @@
                     </md-select>
                     </md-input-container>
                     <md-input-container id="find-ride-form">
-                    <md-select aria-label="vehicle" ng-model="" placeholder="Vehicle">
-                      <md-option ng-repeat="vehicle in vehicle" value="">{{state.abbrev}}</md-option>
+                    <md-select aria-label="vehicle" ng-model="selected_vehicle" ng-change="selectPostVehicle()" placeholder="Vehicle">
+                      <md-option ng-repeat="vehicle in vehicles" value="{{vehicle.$id}}">{{vehicle.year}} {{vehicle.make}} {{vehicle.model}}</md-option>
 
                     </md-select>
                   </md-input-container>
