--- a/app/components/dashboard/views/find/findRide.html
+++ b/app/components/dashboard/views/find/findRide.html
@@ -50,34 +50,27 @@
         </md-card>
         </div>
 
-        <div layout="row" id = "ride-list-container">
-          <md-list>
-            <!--<md-subheader>Rides! :D</md-subheader>-->
+        <div layout="row" id = "ride-list-container" flex>
+          <md-list flex="100">
             <md-list-item class="md-2-line" ng-repeat="ride in rides" ng-cloak>
-              <div layout="row" layout-align="right" flex="100">
-                <div class="md-list-item-text" layout="column" flex="40">
-                  <h3 class="list-text">{{ride.name}}</h3>
-                  <h4 class="list-text">{{ride.comment}}</h4>
-                </div>
-                <div class="md-list-item-text" layout="column" flex="20">
-                  <h3>Seats: {{ride.seats_left}}</h3>
-                </div>
-                <div layout="column" flex="40" >
-                  <div layout="row">
-                    <div layout="column" flex="50" >
-                      <div layout="row" layout-align="end" style="word-wrap: break-word;">
-                        <h4>${{ride.seat_price}}</h4>
-                      </div>
+                <div layout="row" layout-align="right" flex="100">
+                    <div layout="column" flex="15">
+                        <img ng-click="showProfile($event, ride.user)" ng-src="{{ride.img_url}}" class="md-avatar-find"/>
                     </div>
-                    <div layout="column" flex="50">
+                    <div class="md-list-item-text" layout-align="left" layout="column" flex="70">
+                        <h3 style="margin:1px; font-weight:bold;" id="profileDisplayName">{{ride.name}}</h3>
+                        <h4 style="margin:1px;">SEATS: {{ride.seats_left}}</h4>
+                        <h4 style="margin:1px;">PRICE: ${{ride.seat_price}}</h4>
+                        <h4 style="margin:1px;">DATE: {{ride.start_time}}</h4>
+                        <h4 style="margin:1px;" class="list-text">{{ride.comment}}</h4>
+                    </div>
+                    <div layout="column" flex="15">
                       <md-button class="md-accent md-raised" ng-click="showPayment($event, ride, $index)">
                         Buy Seat
                       </md-button>
                     </div>
-                  </div>
                 </div>
-              </div>
-              <md-divider ></md-divider>
+              <md-divider></md-divider>
             </md-list-item>
               <div layout="row" layout-align="left" ng-show="!rides.length" flex="100" >
                 <p id="search" style="color:#d9534f"></p>
