--- a/app/components/dashboard/views/post/postRideTmpl.html
+++ b/app/components/dashboard/views/post/postRideTmpl.html
@@ -23,11 +23,8 @@
                 <input type="text" ng-model="postRidePricing.price">
             </md-input-container> 
                
-               
-            <md-button class="md-accent" ng-click="saveRide()">POST
-            
-            </md-button>
-      
+                <md-button disabled class="md-accent" ng-click="saveRide()">POST</md-button>
+
             </section>
           
         </div>
