--- a/app/components/dashboard/views/reviewFormTmpl.html
+++ b/app/components/dashboard/views/reviewFormTmpl.html
@@ -9,10 +9,21 @@
         <div layout="column" style="height:450px;">
             <section layout="column" flex>
                 <div layout="row">
-                    <img ng-src="{{initReview.img_url}}" class="md-avatar" />
-                    <div layout="column">
-                        <p style="margin:20px;">DRIVER: {{initReview.name}}</p>
+<!--
+                    <div layout="column" flex="20">
+                        <img ng-src="{{initReview.img_url}}" class="md-avatar-review" />
                     </div>
+                    <div class="md-list-item-text" layout-align="left" layout="column" flex="70">
+                        <h3 style="margin-left:2px;">DRIVER: {{initReview.name}}</h3>
+                    </div>
+-->
+                <div class="md-list-item-text" layout-align="left" layout="column" flex="100">
+                    
+                        <label style="margin-top:10px; margin-bottom:3px; margin-left:4px; color:#757575" for="driver_name">DRIVER</label>
+                        <md-divider></md-divider>
+                        <h3 style="margin-top:3px; margin-bottom:0px; margin-left:4px;" name="driver_name" id="profileDisplayName">{{initReview.name}}</h3>
+                   
+                </div>
                 </div>
 
                 <md-input type="hidden" value="{{initReview.$id}}" ng-model="reviewId"></md-input>
