fix the find a ride flex boxes

--- a/app/components/dashboard/views/find/findRide.html
+++ b/app/components/dashboard/views/find/findRide.html
@@ -2,7 +2,7 @@
   <div class="section find_a_ride" id="dashboard-start" layout="column" layout-align="center top">
 
     <div layout="row" layout-align="center">
-      <div layout="column" layout-align="top" flex-gt-md="55" flex="100">
+      <div layout="column" layout-align="top" flex-gt-md="55" style="overflow-y: auto;">
         <div layout="row">
         <md-card flex="100">
           <md-card-content id="find-ride-form">
