--- a/app/components/dashboard/views/find/findRide.html
+++ b/app/components/dashboard/views/find/findRide.html
@@ -10,11 +10,11 @@
               <div layout-gt-sm="row" layout="column">
                 <div layout-gt-sm="column" flex-gt-sm="33" layout="row" layout-align="center">
                     <md-input-container id="find-ride-form">
-                      <label>Starting City</label>
+                      <label>STARTING CITY</label>
                       <input type="text" ng-model="starting.city">
                     </md-input-container>
                     <md-input-container id="find-ride-form">
-                      <md-select aria-label="state" ng-model="starting.state" placeholder="Starting State">
+                      <md-select aria-label="state" ng-model="starting.state" placeholder="STARTING STATE">
                         <md-option ng-repeat="state in states" value="{{state.abbrev}}">{{state.abbrev}}</md-option>
 
                     </md-select>
@@ -24,11 +24,11 @@
 
                 <div layout-gt-sm="column" flex-gt-sm="33" layout="row" layout-align="center">
                   <md-input-container id="find-ride-form">
-                    <label>Ending City</label>
+                    <label>ENDING CITY</label>
                     <input type="text" ng-model="ending.city">
                   </md-input-container>
                   <md-input-container id="find-ride-form">
-                    <md-select aria-label="state" ng-model="ending.state" placeholder="Ending State">
+                    <md-select aria-label="state" ng-model="ending.state" placeholder="ENDING STATE">
                       <md-option ng-repeat="state in states" value="{{state.abbrev}}">{{state.abbrev}}</md-option>
 
                     </md-select>
@@ -37,7 +37,11 @@
 
                 <div layout-gt-sm="column" layout="row" flex-gt-sm="33" layout-align="center">
                   <md-input-container id="find-ride-form" style="max-height: 171px;">
-                    <label>Date: </label>
+                    <label>EARLIEST DEPARTURE DATE</label>
+                    <input type="date" ng-model="search.date">
+                  </md-input-container>
+                  <md-input-container id="find-ride-form" style="max-height: 171px;">
+                    <label>LATEST DEPARTURE DATE</label>
                     <input type="date" ng-model="search.date">
                   </md-input-container>
                 </div>
