--- a/app/components/dashboard/views/post/postRideInfo.html
+++ b/app/components/dashboard/views/post/postRideInfo.html
@@ -20,7 +20,7 @@
                     </md-select>
                     </md-input-container>
                     <md-input-container id="find-ride-form">
-                    <md-select aria-label="vehicle" ng-model="" placeholder="VEHICLE">
+                    <md-select aria-label="vehicle" ng-model="car.vehicle" placeholder="VEHICLE">
                       <md-option ng-repeat="vehicle in vehicle" value="">{{state.abbrev}}</md-option>
 
                     </md-select>
@@ -75,7 +75,7 @@
               <textarea ng-model="post.description" md-maxlength="250" maxlength="250"></textarea>
             </md-input-container>
               <div layout="row" layout-align="center center">
-                <md-button type="submit" class="md-accent md-raised" ng-click="setPrice(); showPostForm($event)">Set Price</md-button>
+                <md-button type="submit" class="md-accent md-raised" ng-click="setPrice(); ">Set Price</md-button>
               </div>
 
             </form>
