dialog box on post ride

--- a/app/components/profile/views/profileFormTmpl.html
+++ b/app/components/profile/views/profileFormTmpl.html
@@ -56,9 +56,9 @@
                                     <div layout="row">
                                         <div layout="column">
                                             <h4 style="margin:2px;">{{trip.comment}}</h4>
-                                            <h5 style="margin:2px;">DEPARTING {{trip.start_time}}</h5>
-                                            <h5 style="margin:2px;">FROM {{trip.from}}</h5>
-                                            <h5 style="margin:2px;">TO {{trip.to}}</h5>
+                                            <h5 style="margin:2px;"><b>DEPARTING</b> {{trip.start_time}}</h5>
+                                            <h5 style="margin:2px;"><b>FROM</b> {{trip.from}}</h5>
+                                            <h5 style="margin:2px;"><b>TO</b> {{trip.to}}</h5>
                                         </div>
                                     </div>
 
