--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -305,8 +305,8 @@ md-toolbar {
 .md-avatar-find {
     border-radius: 2px;
     display: inline-block;
-    margin: 4px 16px;
-    width: 75px;
+    margin: 4px;
+    width: 80%;
     height: 75px;
 }
 
