--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -322,6 +322,10 @@ md-toolbar {
     height: 400px;
 }
 
+.md-accent-closed {
+    text-align: right;
+    margin: 0px 0px;
+}
 
 #dashboard-home-grid {
     background-color: rgba(255,255,255,.73);
