little things on profile, added vehicle in search so user can see that too

--- a/app/components/profile/views/profileFormTmpl.html
+++ b/app/components/profile/views/profileFormTmpl.html
@@ -55,10 +55,10 @@
                                 <md-list-item ng-repeat="trip in profileTrips">
                                     <div layout="row">
                                         <div layout="column">
-                                            <h4 style="margin:2px;">{{trip.comment}}</h4>
-                                            <h5 style="margin:2px;"><b>DEPARTING</b> {{trip.start_time}}</h5>
-                                            <h5 style="margin:2px;"><b>FROM</b> {{trip.from}}</h5>
-                                            <h5 style="margin:2px;"><b>TO</b> {{trip.to}}</h5>
+                                            <h4 id="profileDisplayName" style="margin:1px;">{{trip.comment}}</h4>
+                                            <h5 style="margin:1px;"><b>DEPARTING</b> {{trip.start_time}}</h5>
+                                            <h5 style="margin:1px;"><b>FROM</b> {{trip.from}}</h5>
+                                            <h5 style="margin:1px;"><b>TO</b> {{trip.to}}</h5>
                                         </div>
                                     </div>
 
@@ -76,10 +76,10 @@
                                     <div layout="row" flex>
                                         <div layout="column" flex="80">
 
-                                            <h4 style="margin:2px;">{{vehicle.year}} {{vehicle.make}} {{vehicle.model}}</h4>
-                                            <h5 style="margin:2px;"><b>COLOR</b> {{vehicle.color}}</h5>
-                                            <h5 style="margin:2px;"><b>MPG</b> {{vehicle.mpg}}</h5>
-                                            <h5 style="margin:2px;"><b>SEATS</b> {{vehicle.seats}}</h5>
+                                            <h4 id="profileDisplayName" style="margin:1px;">{{vehicle.year}} {{vehicle.make}} {{vehicle.model}}</h4>
+                                            <h5 style="margin:1px;"><b>COLOR</b> {{vehicle.color}}</h5>
+                                            <h5 style="margin:1px;"><b>MPG</b> {{vehicle.mpg}}</h5>
+                                            <h5 style="margin:1px;"><b>SEATS</b> {{vehicle.seats}}</h5>
                                         </div>
                                         <div layout="column" layout-align="start right" flex="20">
 
