--- a/app/components/dashboard/views/find/findRide.html
+++ b/app/components/dashboard/views/find/findRide.html
@@ -62,11 +62,12 @@
                         <img ng-click="showProfile($event, ride.user)" ng-src="{{ride.img_url}}" class="md-avatar-find"/>
                     </div>
                     <div class="md-list-item-text" layout-align="left" layout="column" flex="70">
-                        <h3 style="margin:1px; font-weight:bold;" id="profileDisplayName">{{ride.name}}</h3>
-                        <h4 style="margin:1px;">SEATS: {{ride.seats_left}}</h4>
-                        <h4 style="margin:1px;">PRICE: ${{ride.seat_price}}</h4>
-                        <h4 style="margin:1px;">DATE: {{ride.start_time}}</h4>
-                        <h4 style="margin:1px;" class="list-text">{{ride.comment}}</h4>
+                        <h3 style="margin-bottom:2px; font-weight:bold; line-height: 1.1em;" id="profileDisplayName">{{ride.comment}}</h3>
+                        <h4 style="margin:1px;"><b>SEATS</b> {{ride.seats_left}}</h4>
+                        <h4 style="margin:1px;"><b>PRICE</b> ${{ride.seat_price}}</h4>
+                        <h4 style="margin:1px;"><b>DATE</b> {{ride.start_time}}</h4>
+                        <h4 style="margin:1px;"><b>VEHICLE</b> {{ride.vehicle.year}} {{ride.vehicle.make}} {{ride.vehicle.model}}</h4>
+<!--                        <h4 style="margin:1px;" class="list-text">{{ride.comment}}</h4>-->
                     </div>
                     <div layout="column" flex="15">
                       <md-button class="md-accent md-raised" ng-click="showPayment($event, ride, $index)">
