total num of seats change

--- a/app/components/dashboard/views/addVehicle/addVehicleTmpl.html
+++ b/app/components/dashboard/views/addVehicle/addVehicleTmpl.html
@@ -34,7 +34,7 @@
                             <input type="number" ng-model="newVehicle.mpg" />
                         </md-input-container>
                         <md-input-container>
-                            <label>TOTAL NUMBER OF SEATS</label>
+                            <label>MAXIMUM NUMBER OF PASSENGERS</label>
                             <input type="number" ng-model="newVehicle.seats" />
                         </md-input-container>
 
