--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -322,6 +322,14 @@ md-toolbar {
     height: 75px;
 }
 
+.md-profile-button {
+    margin: 1px;
+    font-size: 8px;
+    height: 25px;
+    width: 100%;
+    background-color: transparent;
+}
+
 #review_tabs {
     height: 400px;
 }
