seats left commit

--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -40,6 +40,7 @@
                   <h5 style="margin:2px;"><b>DEPARTING</b> {{trip.start_time}}</h5>
                   <h5 style="margin:2px;"><b>FROM</b> {{trip.from}}</h5>
                   <h5 style="margin:2px;"><b>TO</b> {{trip.to}}</h5>
+                  <h5 style="margin:2px;"><b>SEATS LEFT</b> {{trip.seats}}</h5>
                   
                 </div>
               </div>
