--- a/app/components/dashboard/views/find/findRide.html
+++ b/app/components/dashboard/views/find/findRide.html
@@ -70,7 +70,7 @@
 <!--                        <h4 style="margin:1px;" class="list-text">{{ride.comment}}</h4>-->
                     </div>
                     <div layout="column" flex="15">
-                      <md-button class="md-accent md-raised" ng-click="showPayment($event, ride, $index, ride.seat_price)">
+                      <md-button class="md-accent md-raised" ng-click="showPayment($event, ride, $index)">
                         Buy Seat
                       </md-button>
                     </div>
