--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -12,15 +12,19 @@
             <md-divider></md-divider>
             <md-list-item class="md-2-line" ng-repeat="trip in driverTripData">
               <div layout="row" flex>
-                <div layout="column" flex="25">
+                <div layout="column" flex="12.5">
+<!--
                     <md-button class="md-profile-button" ng-repeat="passenger in trip.passengers" ng-click="showProfile($event, passenger.$id)">{{passenger.name}}</md-button>
       
+-->
                     
-<!--                    <img ng-repeat="passenger in trip.passengers" ng-click="showProfile($event, passenger.$id)" ng-src="{{passenger.img_url}}" class="md-avatar-grid"/>-->
+                    <img ng-repeat="passenger in trip.passengers" ng-click="showProfile($event, passenger.$id)" ng-src="{{passenger.img_url}}" class="md-avatar-grid"/>
                 </div>
+<!--
                 <div layout="column" flex="12.5">
                     <img ng-repeat="passenger in trip.passengers" ng-click="showProfile($event, passenger.$id)" ng-src="{{passenger.img_url}}" class="md-avatar-grid"/>
                 </div>
+-->
                 
                   
                   
