--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -11,61 +11,24 @@
             <h4 layout-align="left" style="margin:10px 0px 10px 16px;">RIDES AS DRIVER</h4>
             <md-divider></md-divider>
             <md-list-item class="md-2-line" ng-repeat="trip in driverTripData">
-              <div layout="row" flex>
-                <div layout="column" flex="12.5">
-<!--
-                    <md-button class="md-profile-button" ng-repeat="passenger in trip.passengers" ng-click="showProfile($event, passenger.$id)">{{passenger.name}}</md-button>
-      
--->
-                    
-                    <img ng-repeat="passenger in trip.passengers" ng-click="showProfile($event, passenger.$id)" ng-src="{{passenger.img_url}}" class="md-avatar-grid"/>
-                </div>
-<!--
-                <div layout="column" flex="12.5">
-                    <img ng-repeat="passenger in trip.passengers" ng-click="showProfile($event, passenger.$id)" ng-src="{{passenger.img_url}}" class="md-avatar-grid"/>
-                </div>
--->
+              <div layout="column">
                 
-                  
-                  
-                  
-                  
-                  
-                  
-                  
-                  
-                  <!--<div layout="column" flex="12.5">-->
-                    <!--<img ng-click="showProfile($event, trip.user)" ng-src="{{trip.img_url}}" class="md-avatar-grid"/>-->
-                    <!--<img ng-click="showProfile($event, trip.user)" ng-src="{{trip.img_url}}" class="md-avatar-grid"/>-->
-                    <!---->
-                <!--</div>-->
-                <div layout="column" flex="75">
-                  <h5 style="margin:2px;"><b>{{trip.comment}}</b></h5>
-                  <h5 style="margin:2px;"><b>DEPARTING</b> {{trip.start_time}}</h5>
-                  <h5 style="margin:2px;"><b>FROM</b> {{trip.from}}</h5>
-                  <h5 style="margin:2px;"><b>TO</b> {{trip.to}}</h5>
-                  <h5 style="margin:2px;"><b>SEATS LEFT</b> {{trip.seats}}</h5>
-                  
+                <div layout="row">
+                    <div layout="column">
+              
+                  <h5 style="margin:1px;" id="profileDisplayName"><b>{{trip.comment}}</b></h5>
+                  <h5 style="margin:1px;"><b>DEPARTING</b> {{trip.start_time}}</h5>
+                  <h5 style="margin:1px;"><b>FROM</b> {{trip.from}}</h5>
+                  <h5 style="margin:1px;"><b>TO</b> {{trip.to}}</h5>
+                  <h5 style="margin:1px;"><b>SEATS LEFT</b> {{trip.seats}}</h5>
+                    </div>
                 </div>
+                <div layout="row">
+                    <img ng-repeat="passenger in trip.passengers" ng-click="showProfile($event, passenger.$id)" ng-src="{{passenger.img_url}}" class="md-avatar-grid"/>
+                </div>                
               </div>
               <md-divider></md-divider>
               </md-list-item>
-              
-              
-              
-              
-              
-              
-              
-              
-              
-              
-              
-              
-              
-              
-              
-              
               
             <h4 layout-align="left" style="margin:10px 0px 10px 16px;">RIDES AS PASSENGER</h4>
             <md-divider></md-divider>
@@ -75,10 +38,10 @@
                   <img ng-click="showProfile($event, trip.user)" ng-src="{{trip.img_url}}" class="md-avatar-queue" />
                 </div>
                 <div layout="column" flex="75">
-                    <h5 style="margin:2px;"><b>DRIVER</b> {{trip.name}}</h5>
-                    <h5 style="margin:2px;"><b>DEPARTING</b> {{trip.start_time}}</h5>
-                    <h5 style="margin:2px;"><b>FROM</b> {{trip.from}}</h5>
-                    <h5 style="margin:2px;"><b>TO</b> {{trip.to}}</h5>
+                    <h5 style="margin:1px;"><b>DRIVER</b> {{trip.name}}</h5>
+                    <h5 style="margin:1px;"><b>DEPARTING</b> {{trip.start_time}}</h5>
+                    <h5 style="margin:1px;"><b>FROM</b> {{trip.from}}</h5>
+                    <h5 style="margin:1px;"><b>TO</b> {{trip.to}}</h5>
                   <md-button ng-click="showReviewForm($event, trip.user, trip.passenger_trip_id)" ng-hide="trip.is_reviewed || trip.time_num > now" class="md-accent md-raised">Review</md-button>
                 </div>
               </div>
