Fixed a merge conflict that I overlooked D:

--- a/app/components/dashboard/views/post/postRideInfo.html
+++ b/app/components/dashboard/views/post/postRideInfo.html
@@ -75,7 +75,7 @@
               <textarea ng-model="post.description" md-maxlength="150" maxlength="150"></textarea>
             </md-input-container>
               <div layout="row" layout-align="center center">
-                <md-button type="submit" class="md-accent md-raised" ng-click="setPrice()">Set Price</md-button>
+                <md-button type="submit" class="md-accent md-raised" ng-click="setPrice($event)">Set Price</md-button>
               </div>
 
             </form>
