--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -310,8 +310,8 @@ md-toolbar {
     border-radius: 2px;
     display: inline-block;
     margin: 4px;
-    width: 80%;
-    height: 75px;
+    width: 100px;
+    height: 100px;
 }
 
 .md-avatar-review {
