--- a/app/components/dashboard/views/reviewFormTmpl.html
+++ b/app/components/dashboard/views/reviewFormTmpl.html
@@ -31,7 +31,7 @@
                     <md-option ng-repeat="option in reviewOptions" value="{{option}}">{{option}}</md-option>
                 </md-select>
                 <md-input-container>
-                    <label>Comments</label>
+                    <label>COMMENTS</label>
 
                     <textarea ng-model="review.comment" md-maxlength="250" maxlength="250"></textarea>
                 </md-input-container> 
