--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -11,7 +11,7 @@
               
             <h4 style="margin:8px 0px 8px 16px;" layout-align="left">RIDES AS DRIVER</h4>
             <md-divider></md-divider>
-            <md-list-item class="md-2-line" ng-repeat="trip in driverTripData">
+            <md-list-item class="md-2-line" ng-repeat="trip in driverTripData | orderBy:'time_num'">
               <div layout="column" style="margin: 4px 0px;">
                 
                 <div layout="row" >
@@ -31,7 +31,7 @@
               
             <h4 layout-align="left" style="margin:8px 0px 8px 16px;">RIDES AS PASSENGER</h4>
             <md-divider></md-divider>
-            <md-list-item class="md-2-line" ng-repeat="trip in tripData">
+            <md-list-item class="md-2-line" ng-repeat="trip in tripData | orderBy:'time_num'">
               <div layout="row" flex style="margin: 4px 0px;">
                 <div layout="column" flex="25">
                   <img ng-click="showProfile($event, trip.user)" ng-src="{{trip.img_url}}" class="md-avatar-queue" />
