--- a/app/components/profile/views/profileFormTmpl.html
+++ b/app/components/profile/views/profileFormTmpl.html
@@ -52,7 +52,7 @@
                         <md-tab-label>RIDES</md-tab-label>
                         <md-tab-body>
                             <md-list>
-                                <md-list-item ng-repeat="trip in profileTrips">
+                                <md-list-item ng-repeat="trip in profileTrips | orderBy:'time_num'">
                                     <div layout="row">
                                         <div layout="column">
                                             <h4 id="profileDisplayName" style="margin:1px;">{{trip.comment}}</h4>
